--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "react-modal-hp",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "description": "Simple React Modal",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build:tsc": "tsc",
-    "build": "npm run clean && npm run build:tsc",
+    "bundle": "webpack --mode production",
+    "build": "npm run clean && npm run bundle",
     "clean": "rm -rf dist"
   },
   "keywords": [
@@ -24,7 +26,12 @@
     "@types/node": "^20.1.0",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.4",
-    "typescript": "^5.0.4"
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.2",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
+    "webpack": "^5.82.0",
+    "webpack-cli": "^5.0.2"
   },
   "license": "ISC"
 }
