--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,8 @@ jobs:
           echo "version=${version}" >> $GITHUB_OUTPUT
           echo "major=${major}" >> $GITHUB_OUTPUT
 
-      - uses: release-drafter/release-drafter@master
+      - name: 릴리즈 노트 작성
+        uses: release-drafter/release-drafter@master
         with:
           version: ${{ steps.version.outputs.version }}
           publish: true
